Consolodate all my git commands
Signed-off-by: Amelia Aronsohn <squirrel@wearing.black>

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -5,6 +5,7 @@
 [core]
 	excludesfile = ~/.gitignore
 	editor = nvim
+	autocrlf = input
 [gpg]
 	program = /usr/local/bin/gpg
 [commit]
@@ -21,6 +22,8 @@
 	st = status
 	sm = !git switch master && git pull origin master
 	nuke = !git branch | egrep -v '( master$|^\\*)' | xargs git branch -D
+	rmb = "!f() { git fetch -p && git branch -vv | awk '/: gone]/ {print $1}' | xargs git branch -D; }; f"
+
 
 #Silly tools fight for config down here
 [hub]
