Post bootstrap cleanup pt 2
Signed-off-by: Amelia Aronsohn <squirrel@wearing.black>

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -61,6 +61,7 @@ set-option -g @plugin 'tmux-plugins/tmux-open'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
 # Battery
 set-option -g @plugin 'tmux-plugins/tmux-battery'
+set-option -g @batt_remain_short 'true'
 # tpm restore
 set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 set-option -g @resurrect-save 'S'
@@ -74,4 +75,4 @@ set-option -g @continuum-restore 'on'
 if-shell '[[ -f "$HOME/.config/local/tmux.conf" ]]' 'source-file $HOME/.config/local/tmux.conf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run-shell '~/.tmux/plugins/tpm/tpm'
+run-shell -b '~/.tmux/plugins/tpm/tpm'
