--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -20,7 +20,7 @@
 	ci = commit
 	br = branch
 	st = status
-	sm = !git switch master && git pull origin master
+	sm = !git switch master && git pull origin master --prune
 	nuke = !git branch | egrep -v '( master$|^\\*)' | xargs git branch -D
 	rmb = "!f() { git fetch -p && git branch -vv | awk '/: gone]/ {print $1}' | xargs git branch -D; }; f"
 
