Moving to main in git
Signed-off-by: Amelia Aronsohn <squirrel@wearing.black>

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -21,7 +21,7 @@
 	br = branch
 	st = status
 	sm = !git switch master && git pull origin master --prune
-	nuke = !git branch | egrep -v '( master$|^\\*)' | xargs git branch -D
+	nuke = !git branch | egrep -v '( main$|master$|^\\*)' | xargs git branch -D
 	rmb = "!f() { git fetch -p && git branch -vv | awk '/: gone]/ {print $1}' | xargs git branch -D; }; f"
 
 
