--- a/home/.markdownlintrc
+++ b/home/.markdownlintrc
@@ -1,5 +1,6 @@
 {
   "default": true,
-  "MD007": { "indent": 2 },
-  "line-length": false
+  "first-line-h1": false,
+  "line-length": false,
+  "ul-indent": { "indent": 2 }
 }
