--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -1,4 +1,8 @@
-HashKnownHosts yes
+HashKnownHosts no
+
+Host pi.hole
+  ProxyCommand none
+  User pi
 
 Host colo01.squirrels.wtf
   ProxyCommand none
@@ -40,7 +44,6 @@ Host 10.* 172.16.* 172.17.* 172.18.* 172.19.* 172.20.* 172.21.* 172.22.* 172.23.
 Host *
   PreferredAuthentications publickey,keyboard-interactive,password
   ServerAliveInterval 5
-  HashKnownHosts yes
   VisualHostKey yes
   TCPKeepAlive yes
   CheckHostIP yes
