Fix key command

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -13,7 +13,7 @@ bind-key -n 'C-h' select-pane -L
 bind-key -n 'C-j' select-pane -D
 bind-key -n 'C-k' select-pane -U
 bind-key -n 'C-l' select-pane -R
-bind-key -n 'C-\\' select-pane -l
+bind-key -n 'C-\' select-pane -l
 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
