--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -65,6 +65,7 @@ set-option -g status-right-length 50
 
 # List of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
+set-option -g @plugin 'christoomey/vim-tmux-navigator'
 set-option -g @plugin 'tmux-plugins/tmux-sensible'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
 # Battery
@@ -74,6 +75,7 @@ set-option -g @batt_remain_short 'true'
 set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 set-option -g @resurrect-save 'S'
 set-option -g @resurrect-restore 'r'
+set-option -g @resurrect-strategy-nvim 'session'
 # tpm continuum
 set-option -g @plugin 'tmux-plugins/tmux-continuum'
 set-option -g @continuum-restore 'on'
