Make panes open in cwd & cleanup tmux
Signed-off-by: Amelia Aronsohn <squirrel@wearing.black>

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,9 +1,6 @@
-# Fuck you spacebar
-unbind Space
-
-# Easier splits
-bind | split-window -h
-bind - split-window -v
+# Easier splits & all splits carry path over
+bind-key | split-window -h -c "#{pane_current_path}"
+bind-key - split-window -v -c "#{pane_current_path}"
 
 # vim homerow power
 set-option -g mode-keys vi
@@ -14,15 +11,11 @@ bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel
 
-#ctrl-vim for window
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
 # VIM CAPS for reszing
-bind H resize-pane -L 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind L resize-pane -R 5
+bind-key H resize-pane -L 5
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key L resize-pane -R 5
 
 # I demand trackpad respect
 set-option -g mouse on
