Explicit new window directory as well

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -2,6 +2,9 @@
 bind-key | split-window -h -c "#{pane_current_path}"
 bind-key - split-window -v -c "#{pane_current_path}"
 
+# New windows always in ~
+bind c new-window -c "~"
+
 # vim homerow power
 set-option -g mode-keys vi
 set-option -g @shell_mode 'vi'
