--- a/home/.markdownlintrc
+++ b/home/.markdownlintrc
@@ -2,5 +2,7 @@
   "default": true,
   "first-line-h1": false,
   "line-length": false,
+  "no-emphasis-as-header": false,
+  "no-inline-html": false,
   "ul-indent": { "indent": 2 }
 }
