Remove my breaking ul spacing, drop nvim guitruecolors
Signed-off-by: Amelia Aronsohn <squirrel@wearing.black>

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -27,6 +27,7 @@ Host *.squirrels.wtf
 Host *.dnsimple.???
   IdentityFile ~/.ssh/keys/dnsimple/id_ed25519
   IdentityFile ~/.ssh/keys/dnsimple/id_rsa
+  IdentityFile ~/.ssh/keys/dnsimple/bootstrap
   ForwardX11Trusted yes
   ForwardAgent yes
   User dos
