Get my markdown working right and remember how to json

--- a/home/.markdownlintrc
+++ b/home/.markdownlintrc
@@ -3,5 +3,5 @@
   "first-line-h1": false,
   "line-length": false,
   "no-emphasis-as-header": false,
-  "no-inline-html": false,
+  "no-inline-html": false
 }
