--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -47,6 +47,8 @@ set-option -g status-left '#S: '
 set-option -g status-right ' #{battery_status_fg} #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M'
 set-option -g status-right-length 50
 
+set-option -sa terminal-overrides ',screen-256color:RGB'
+
 # List of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'christoomey/vim-tmux-navigator'
