--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -47,7 +47,7 @@ set-option -g status-left '#S: '
 set-option -g status-right ' #{battery_status_fg} #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M'
 set-option -g status-right-length 50
 
-set-option -sa terminal-overrides ',screen-256color:RGB'
+set-option -sa terminal-overrides ',*256color:RGB'
 
 # List of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
