--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -1,6 +1,6 @@
 HashKnownHosts no
 
-Host pi.hole
+Host pi.hole michiru.local haruka.local
   ProxyCommand none
   User pi
 
@@ -52,6 +52,7 @@ Host *
 
   #ProxyCommand ssh -q -W %h:%p stash.squirrels.wtf
 
+  IdentityFile ~/.ssh/keys/%L
   IdentityFile ~/.ssh/keys/%h/%r/id_ed25519
   IdentityFile ~/.ssh/keys/%h/%r/id_rsa
   IdentityFile ~/.ssh/keys/%h/id_ed25519
