--- a/home/.config/yamllint/config
+++ b/home/.config/yamllint/config
@@ -2,16 +2,14 @@
 extends: default
 
 yaml-files:
-  - '*.yaml'
-  - '*.yaml.erb'
-  - '*.yml'
-  - '*.yml.erb'
-  - '.yamllint'
+  - "*.yaml"
+  - "*.yaml.erb"
+  - "*.yml"
+  - "*.yml.erb"
+  - ".yamllint"
 
 rules:
   document-start: false
   line-length:
     max: 256
     level: warning
-
-# vim: ft=yaml
