Write info json with tubes
Signed-off-by: Amelia Aronsohn <squirrel@wearing.black>

--- a/home/.config/yt-dlp/config
+++ b/home/.config/yt-dlp/config
@@ -7,7 +7,10 @@
 ## Write part file
 --part
 
+# Write metadata to save lookups
+--write-info-json
+
 ## Write a subtitle file
 --write-subs
 --sub-format srt/ass/best
---sub-langs "en.*,ja"
+--sub-langs "en.*"
