Fix prsbad pr opening command & add to git aliases
reduce the number of rev-parse commands run
add a check for not being in a repo

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -42,6 +42,7 @@
 	sm = "!f() { git switch main && git pull origin main --prune; }; f"
 	wipe = "!f() { git branch | egrep -v '( main$|master$|^\\*)' | xargs git branch -D; }; f"
 	open = "!git_open"
+	prs = "!prsbad"
 
 #Silly tools fight for config down here
 [hub]
