Fix vim support when needed

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -32,6 +32,11 @@ set-option -g set-titles on
 # I prefer reordering to splaying numbers
 set-option -g renumber-windows on
 
+# NeoVim Requests this
+set-option -sg escape-time 10
+set-option -sg focus-events on
+set-option -sa terminal-overrides ',*256color:RGB'
+
 ## Status Bar
 set-option -g status-interval 20
 set-option -g visual-activity on
@@ -46,8 +51,6 @@ set-option -g status-justify left
 set-option -g status-left '#S: '
 set-option -g status-right ' #{battery_status_fg} #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M'
 set-option -g status-right-length 50
-
-set-option -sa terminal-overrides ',*256color:RGB'
 
 # List of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
