--- a/home/.config/alacritty/alacritty.yml
+++ b/home/.config/alacritty/alacritty.yml
@@ -14,34 +14,31 @@ font:
     y: 0
   builtin_box_drawing: false
 
+# Colors (One Dark)
 colors:
   # Default colors
   primary:
-    background: "0x171d23"
-    foreground: "0xffffff"
-
-  # Cursor colors
-  cursor:
-    text: "0xfafafa"
-    cursor: "0x008b94"
+    background: "0x1e2127"
+    foreground: "0xabb2bf"
 
   # Normal colors
   normal:
-    black: "0x333f4a"
-    red: "0xd95468"
-    green: "0x8bd49c"
-    blue: "0x539afc"
-    magenta: "0xb62d65"
-    cyan: "0x70e1e8"
-    white: "0xb7c5d3"
+    black: "0x1e2127"
+    red: "0xe06c75"
+    green: "0x98c379"
+    yellow: "0xd19a66"
+    blue: "0x61afef"
+    magenta: "0xc678dd"
+    cyan: "0x56b6c2"
+    white: "0xabb2bf"
 
   # Bright colors
   bright:
-    black: "0x41505e"
-    red: "0xd95468"
-    green: "0x8bd49c"
-    yellow: "0xebbf83"
-    blue: "0x5ec4ff"
-    magenta: "0xe27e8d"
-    cyan: "0x70e1e8"
+    black: "0x5c6370"
+    red: "0xe06c75"
+    green: "0x98c379"
+    yellow: "0xd19a66"
+    blue: "0x61afef"
+    magenta: "0xc678dd"
+    cyan: "0x56b6c2"
     white: "0xffffff"
