--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -57,6 +57,9 @@ set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'christoomey/vim-tmux-navigator'
 set-option -g @plugin 'tmux-plugins/tmux-sensible'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
+set-option -g @plugin 'catppuccin/tmux'
+set-option -g @catppuccin_flavour 'frappe'
+set-option -g @catppuccin_window_tabs_enabled on
 # Battery
 set-option -g @plugin 'tmux-plugins/tmux-battery'
 set-option -g @batt_remain_short 'true'
