Switch to mocha theme, drop overwritten tmux settings
Signed-off-by: Amelia Aronsohn <squirrel@wearing.black>

--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -2290,6 +2290,6 @@ macos_thicken_font 0.75
 
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Frappe
+# Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
