--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -37,32 +37,14 @@ set-option -sg escape-time 10
 set-option -sg focus-events on
 set-option -sa terminal-overrides ',*256color:RGB'
 
-## Status Bar
-set-option -g status-interval 20
-set-option -g visual-activity on
-set-option -w -g monitor-activity on
-set-option -w -g automatic-rename on
-
-set-option -g status-bg colour234
-set-option -g status-fg colour248
-set-option -g window-status-current-style bg=colour226,fg=colour234
-
-set-option -g status-justify left
-set-option -g status-left '#S: '
-set-option -g status-right ' #{battery_status_fg} #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M'
-set-option -g status-right-length 50
-
 # List of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'christoomey/vim-tmux-navigator'
 set-option -g @plugin 'tmux-plugins/tmux-sensible'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
 set-option -g @plugin 'catppuccin/tmux'
-set-option -g @catppuccin_flavour 'frappe'
+set-option -g @catppuccin_flavour 'mocha'
 set-option -g @catppuccin_window_tabs_enabled on
-# Battery
-set-option -g @plugin 'tmux-plugins/tmux-battery'
-set-option -g @batt_remain_short 'true'
 # tpm restore
 set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 set-option -g @resurrect-save 'S'
