--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -42,9 +42,8 @@ set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'christoomey/vim-tmux-navigator'
 set-option -g @plugin 'tmux-plugins/tmux-sensible'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
-set-option -g @plugin 'catppuccin/tmux'
-set-option -g @catppuccin_flavour 'mocha'
-set-option -g @catppuccin_window_tabs_enabled on
+set-option -g @plugin 'maxpetretta/tmux-monokai-pro'
+set-option -g @monokai-plugins "git cpu-usage ram-usage"
 # tpm restore
 set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 set-option -g @resurrect-save 'S'
