tpm docs no longer recommend background for loading

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -57,4 +57,4 @@ set-option -g @continuum-restore 'on'
 if-shell '[[ -f "$HOME/.config/local/tmux.conf" ]]' 'source-file $HOME/.config/local/tmux.conf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run-shell -b '~/.tmux/plugins/tpm/tpm'
+run-shell '~/.tmux/plugins/tpm/tpm'
