New tmux navigation plugin
Signed-off-by: Amelia Aronsohn <squirrel@wearing.black>

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -39,7 +39,7 @@ set-option -sa terminal-overrides ',*256color:RGB'
 
 # List of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
-set-option -g @plugin 'christoomey/vim-tmux-navigator'
+set-option -g @plugin 'aserowy/tmux.nvim'
 set-option -g @plugin 'tmux-plugins/tmux-sensible'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
 set-option -g @plugin 'maxpetretta/tmux-monokai-pro'
