--- a/home/.config/yamllint/config
+++ b/home/.config/yamllint/config
@@ -9,6 +9,6 @@ yaml-files:
   - ".yamllint"
 
 rules:
-  line-length:
-    allow-non-breakable-words: true
-    allow-non-breakable-inline-mappings: true
+  line-length: disable
+
+# vi: ft=yaml
