feat: move git status back into prompt

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -43,7 +43,7 @@ set-option -g @plugin 'christoomey/vim-tmux-navigator'
 set-option -g @plugin 'tmux-plugins/tmux-sensible'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
 set-option -g @plugin 'maxpetretta/tmux-monokai-pro'
-set-option -g @monokai-plugins "git cpu-usage ram-usage"
+set-option -g @monokai-plugins "cpu-usage ram-usage"
 # tpm restore
 set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 set-option -g @resurrect-save 'S'
