fix: align yamllint and yamlfmt
Signed-off-by: Amelia Aronsohn <squirrel@wearing.black>

--- a/home/.config/yamllint/config
+++ b/home/.config/yamllint/config
@@ -10,5 +10,8 @@ yaml-files:
 
 rules:
   line-length: disable
+  comments:
+    require-starting-space: true
+    ignore-shebangs: true
 
 # vi: ft=yaml
