chore: sort git commands

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -38,20 +38,22 @@
 	al = config --get-regexp alias
 	ap = add --patch
 	br = branch
-	bb = "!git-better-branch"
 	cm = commit --message
+	lg = log --graph --pretty=reference
 	pl = pull
 	ps = push
 	review = log --oneline
 	st = status --short --show-stash --branch
+	stash = stash --all
 	sw = switch
 	swc = switch --force-create
+	# Shell commands
+	bb = "!git-better-branch"
+	open = "!git_open"
 	pr = "!f() { git fetch origin pull/$1/head:pr-$1 && git switch pr-$1; }; f"
+	prs = "!prsbad"
 	sm = "!f() { git switch main && git fetch --prune && git pull; }; f"
 	wipe = "!f() { git branch | egrep -v '( main$|master$|^\\*)' | xargs git branch -D; }; f"
-	open = "!git_open"
-	prs = "!prsbad"
-	lg = log --pretty=reference
 
 #Silly tools fight for config down here
 [filter "lfs"]
