--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -39,10 +39,9 @@
 	ap = add --patch
 	br = branch
 	cm = commit --message
-	lg = log --graph --pretty=reference
+	lg = log --graph --pretty='format:%C(auto)%h %s, %C(magenta)%ad' --date=relative
 	pl = pull
 	ps = push
-	review = log --oneline
 	st = status --short --show-stash --branch
 	stash = stash --all
 	sw = switch
