--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -29,9 +29,9 @@ input "type:pointer" natural_scroll enabled
 
 ### Idle configuration
 exec swayidle -w \
-         timeout 300 'swaylock -f -c 000000' \
+         timeout 300 'swaylock' \
          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-         before-sleep 'swaylock -f -c 000000'
+         before-sleep 'swaylock'
 
 ### configurations
 default_orientation auto
@@ -61,7 +61,7 @@ exec wl-paste --type image --watch cliphist store #Stores only image data
     # Start my fileManager
     bindsym $mod+e exec $fileManager
     #Lock it
-    bindsym $mod+Shift+l exec swaylock -f -c 000000
+    bindsym $mod+Shift+l exec swaylock
     # clipboard manager
     bindsym $mod+Shift+v exec cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
