--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -18,7 +18,8 @@ set $menu wofi --show drun | xargs swaymsg exec --
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output HDMI-A-1 bg ~/Desktops/WebbyRelax.png fill
+output HDMI-A-2 bg ~/Desktops/WebbyMoon.png fill
 output HDMI-A-2 transform 90
 exec swaymsg focus output HDMI-A-1
 
