--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -62,7 +62,7 @@ exec wl-paste --type image --watch cliphist store #Stores only image data
     # Start my fileManager
     bindsym $mod+E exec $fileManager
     #Lock it
-    bindsym $mod+Shift+L exec swaylock
+    bindsym $mod+Escape exec swaylock
     # clipboard manager
     bindsym $mod+Shift+V exec cliphist list | rofi -dmenu | cliphist decode | wl-copy
     # 1Password
@@ -118,6 +118,18 @@ exec wl-paste --type image --watch cliphist store #Stores only image data
     bindsym $mod+Down focus down
     bindsym $mod+Up focus up
     bindsym $mod+Right focus right
+
+    # Move the window
+    bindsym $mod+Shift+h move left
+    bindsym $mod+Shift+j move down
+    bindsym $mod+Shift+k move up
+    bindsym $mod+Shift+l move right
+    # Or use $mod+Shift[up|down|left|right]
+    bindsym $mod+Shift+Left move left
+    bindsym $mod+Shift+Down move down
+    bindsym $mod+Shift+Up move up
+    bindsym $mod+Shift+Right move right
+
 #
 # Workspaces:
 #
